--- a/02_browse.html
+++ b/02_browse.html
@@ -21,51 +21,60 @@
         </div>
       </div>
     </section>
+    <section class="overlay"></section>
     <section class="menu-mobile">
-      <div class="back-button">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 75 50" style="enable-background:new 0 0 75 50;" xml:space="preserve" class="back-arrow">
-          <path d="M3,23h69c1.1,0,2,0.9,2,2v0c0,1.1-0.9,2-2,2H3c-1.1,0-2-0.9-2-2v0C1,23.9,1.9,23,3,23z"></path>
-          <path d="M4,23.2l10.5,6.1c1,0.5,1.3,1.8,0.7,2.7l0,0c-0.5,1-1.8,1.3-2.7,0.7L2,26.7c-1-0.6-1.3-1.8-0.7-2.7l0,0C1.8,23,3.1,22.7,4,23.2z"></path>
-          <path d="M2,23.3l10.5-6.1c1-0.6,2.2-0.2,2.7,0.7l0,0c0.5,1,0.2,2.2-0.7,2.7L4,26.8c-1,0.6-2.2,0.2-2.7-0.7l0,0C0.7,25.1,1.1,23.9,2,23.3z"></path>
-        </svg>
-      </div>
       <div class="menu-mobile-content">
-        <div class="cat-wrapper"><img src="svg/icon-cat-retail-light.svg" class="icon-cat-mobile">
-          <div class="cat-text-field inline">
-            <div class="cat-name">Retail</div>
-            <div class="cat-count">(26)</div>
+        <div class="back-button">
+          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 75 50" style="enable-background:new 0 0 75 50;" xml:space="preserve" class="back-arrow">
+            <path d="M3,23h69c1.1,0,2,0.9,2,2v0c0,1.1-0.9,2-2,2H3c-1.1,0-2-0.9-2-2v0C1,23.9,1.9,23,3,23z"></path>
+            <path d="M4,23.2l10.5,6.1c1,0.5,1.3,1.8,0.7,2.7l0,0c-0.5,1-1.8,1.3-2.7,0.7L2,26.7c-1-0.6-1.3-1.8-0.7-2.7l0,0C1.8,23,3.1,22.7,4,23.2z"></path>
+            <path d="M2,23.3l10.5-6.1c1-0.6,2.2-0.2,2.7,0.7l0,0c0.5,1,0.2,2.2-0.7,2.7L4,26.8c-1,0.6-2.2,0.2-2.7-0.7l0,0C0.7,25.1,1.1,23.9,2,23.3z"></path>
+          </svg>
+        </div>
+        <nav class="mobile-nav-set1"><a href="#" class="nav-favorite"> my favorite offers</a>
+          <div class="divider-teal"></div>
+        </nav>
+        <div class="mobile-cat-container">
+          <div class="cat-wrapper"><img src="svg/icon-cat-retail-light.svg" class="icon-cat-mobile">
+            <div class="cat-text-field inline">
+              <div class="cat-name">Retail</div>
+              <div class="cat-count">(26)</div>
+            </div>
+          </div>
+          <div class="cat-wrapper"><img src="svg/icon-cat-fitness-light.svg" class="icon-cat-mobile">
+            <div class="cat-text-field inline">
+              <div class="cat-name">Fitness</div>
+              <div class="cat-count">(26)</div>
+            </div>
+          </div>
+          <div class="cat-wrapper"><img src="svg/icon-cat-er-light.svg" class="icon-cat-mobile">
+            <div class="cat-text-field inline">
+              <div class="cat-name">Emergency Service</div>
+              <div class="cat-count">(26)</div>
+            </div>
+          </div>
+          <div class="cat-wrapper"><img src="svg/icon-cat-entertainment-light.svg" class="icon-cat-mobile">
+            <div class="cat-text-field inline">
+              <div class="cat-name">Entertainment</div>
+              <div class="cat-count">(26)</div>
+            </div>
+          </div>
+          <div class="cat-wrapper"><img src="svg/icon-cat-homeimprovement-light.svg" class="icon-cat-mobile">
+            <div class="cat-text-field inline">
+              <div class="cat-name">Home Improvement</div>
+              <div class="cat-count">(26)</div>
+            </div>
+          </div>
+          <div class="cat-wrapper"><img src="svg/icon-cat-nhoguide-light.svg" class="icon-cat-mobile">
+            <div class="cat-text-field inline">
+              <div class="cat-name">NHO Guide</div>
+              <div class="cat-count">(26)  </div>
+            </div>
           </div>
         </div>
-        <div class="cat-wrapper"><img src="svg/icon-cat-fitness-light.svg" class="icon-cat-mobile">
-          <div class="cat-text-field inline">
-            <div class="cat-name">Fitness</div>
-            <div class="cat-count">(26)</div>
-          </div>
-        </div>
-        <div class="cat-wrapper"><img src="svg/icon-cat-er-light.svg" class="icon-cat-mobile">
-          <div class="cat-text-field inline">
-            <div class="cat-name">Emergency Service</div>
-            <div class="cat-count">(26)</div>
-          </div>
-        </div>
-        <div class="cat-wrapper"><img src="svg/icon-cat-entertainment-light.svg" class="icon-cat-mobile">
-          <div class="cat-text-field inline">
-            <div class="cat-name">Entertainment</div>
-            <div class="cat-count">(26)</div>
-          </div>
-        </div>
-        <div class="cat-wrapper"><img src="svg/icon-cat-homeimprovement-light.svg" class="icon-cat-mobile">
-          <div class="cat-text-field inline">
-            <div class="cat-name">Home Improvement</div>
-            <div class="cat-count">(26)</div>
-          </div>
-        </div>
-        <div class="cat-wrapper"><img src="svg/icon-cat-nhoguide-light.svg" class="icon-cat-mobile">
-          <div class="cat-text-field inline">
-            <div class="cat-name">NHO Guide</div>
-            <div class="cat-count">(26)</div>
-          </div>
-        </div>
+        <nav class="mobile-nav-set2">
+          <div class="divider-teal"></div><a href="#">Browse Offers</a><a href="#"> log in</a><a href="#" class="nav-profile"> jay engstrom<span>(many days left)  </span></a><a href="#"> how it works</a><a href="#"> get an invitation code</a>
+        </nav>
       </div>
     </section>
     <header>
@@ -85,7 +94,6 @@
         <div class="row">
           <div class="col">
             <h2 class="top-buffer">Your Local Offers</h2>
-            <button class="show-notice">click me to toggle the snackbar</button>
           </div>
         </div>
         <div class="row">
