error msg on NHOO form + mobile menu change

--- a/01_index.html
+++ b/01_index.html
@@ -84,7 +84,9 @@
               <form class="form-regular">
                 <h3>enter invitation code to see all Offers</h3>
                 <input type="text" value="">
-                <input type="submit" value="get Offers"><a id="link-get-invite" href="#" class="teal">
+                <input type="submit" value="get Offers">
+                <div style="clear: both"></div>
+                <div class="error-msg">Please Enter a Valid Code</div><a id="link-get-invite" href="#" class="teal">
                    
                   get invitation code</a>
               </form>
