--- a/02_browse.html
+++ b/02_browse.html
@@ -21,20 +21,18 @@
         </div>
       </div>
     </section>
-    <section class="overlay"></section>
     <section class="menu-mobile">
       <div class="menu-mobile-content">
-        <div class="back-button">
-          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 75 50" style="enable-background:new 0 0 75 50;" xml:space="preserve" class="back-arrow">
-            <path d="M3,23h69c1.1,0,2,0.9,2,2v0c0,1.1-0.9,2-2,2H3c-1.1,0-2-0.9-2-2v0C1,23.9,1.9,23,3,23z"></path>
-            <path d="M4,23.2l10.5,6.1c1,0.5,1.3,1.8,0.7,2.7l0,0c-0.5,1-1.8,1.3-2.7,0.7L2,26.7c-1-0.6-1.3-1.8-0.7-2.7l0,0C1.8,23,3.1,22.7,4,23.2z"></path>
-            <path d="M2,23.3l10.5-6.1c1-0.6,2.2-0.2,2.7,0.7l0,0c0.5,1,0.2,2.2-0.7,2.7L4,26.8c-1,0.6-2.2,0.2-2.7-0.7l0,0C0.7,25.1,1.1,23.9,2,23.3z"></path>
-          </svg>
-        </div>
-        <nav class="mobile-nav-set1"><a href="#" class="nav-favorite"> my favorite offers</a>
+        <nav class="mobile-nav-set1"><a href="#" class="nav-favorite"> my favorite offers<span>(12)</span></a><a href="#">Browse Offers</a><a href="#"> log in</a><a href="#" class="nav-profile"> jay engstrom<span>(3 days left)  </span></a><a href="#"> how it works</a><a href="#"> get an invitation code</a>
           <div class="divider-teal"></div>
         </nav>
         <div class="mobile-cat-container">
+          <div class="cat-wrapper"><img src="svg/icon-cat-restaurant-light.svg" class="icon-cat-mobile">
+            <div class="cat-text-field inline">
+              <div class="cat-name">Retail</div>
+              <div class="cat-count">(26)</div>
+            </div>
+          </div>
           <div class="cat-wrapper"><img src="svg/icon-cat-retail-light.svg" class="icon-cat-mobile">
             <div class="cat-text-field inline">
               <div class="cat-name">Retail</div>
@@ -72,15 +70,14 @@
             </div>
           </div>
         </div>
-        <nav class="mobile-nav-set2">
-          <div class="divider-teal"></div><a href="#">Browse Offers</a><a href="#"> log in</a><a href="#" class="nav-profile"> jay engstrom<span>(many days left)  </span></a><a href="#"> how it works</a><a href="#"> get an invitation code</a>
-        </nav>
       </div>
     </section>
     <header>
       <div class="container">
         <div class="row">
-          <div class="col"><img src="svg/icon-hamburger.svg" class="hamburger"><img src="svg/logo.svg" class="logo">
+          <div class="col">
+            <!--HTML-->
+            <button id="burger"><span id="bun__top" class="bun"></span><span id="patty" class="bun"></span><span id="bun__bottom" class="bun"></span></button><img src="svg/logo.svg" class="logo">
             <nav><a class="nav-profile"> jay engstrom<span>(5)</span></a><a class="nav-favorite"> my favorite offers</a>
             </nav>
           </div>
@@ -99,40 +96,39 @@
         <div class="row">
           <div class="main-side-cat col-xl-3 top-buffer">
             <div class="side-cat-wrapper">
-              
               <div class="side-cat-wrapper-inner">
                 <div class="cat-wrapper highlight"><a href="#offerBox-restaurant"><img src="svg/icon-cat-restaurant.svg" class="icon-cat">
-                    <div class="cat-text-field inline">
+                    <div class="cat-text-field">
                       <div class="cat-name">Restaurant</div>
                       <div class="cat-count">(26)</div>
                     </div></a></div>
                 <div class="cat-wrapper"><a href="#offerBox-retail"><img src="svg/icon-cat-retail.svg" class="icon-cat">
-                    <div class="cat-text-field inline">
+                    <div class="cat-text-field">
                       <div class="cat-name">Retail</div>
                       <div class="cat-count">(26)</div>
                     </div></a></div>
                 <div class="cat-wrapper highlight"><a href="#offerBox-fitness"><img src="svg/icon-cat-fitness.svg" class="icon-cat">
-                    <div class="cat-text-field inline">
+                    <div class="cat-text-field">
                       <div class="cat-name">Fitness</div>
                       <div class="cat-count">(26)</div>
                     </div></a></div>
                 <div class="cat-wrapper"><a href="#offerBox-er"><img src="svg/icon-cat-er.svg" class="icon-cat">
-                    <div class="cat-text-field inline">
+                    <div class="cat-text-field">
                       <div class="cat-name">Emergency Service</div>
                       <div class="cat-count">(26)</div>
                     </div></a></div>
                 <div class="cat-wrapper highlight"><a href="#offerBox-entertainment"><img src="svg/icon-cat-entertainment.svg" class="icon-cat">
-                    <div class="cat-text-field inline">
+                    <div class="cat-text-field">
                       <div class="cat-name">Entertainment</div>
                       <div class="cat-count">(26)</div>
                     </div></a></div>
                 <div class="cat-wrapper"><a href="#offerBox-homeimprovement"><img src="svg/icon-cat-homeimprovement.svg" class="icon-cat">
-                    <div class="cat-text-field inline">
+                    <div class="cat-text-field">
                       <div class="cat-name">Home Improvement</div>
                       <div class="cat-count">(26)</div>
                     </div></a></div>
                 <div class="cat-wrapper highlight"><a href="#offerBox-nhoguide"><img src="svg/icon-cat-nhoguide.svg" class="icon-cat">
-                    <div class="cat-text-field inline">
+                    <div class="cat-text-field">
                       <div class="cat-name">NHO Guide</div>
                       <div class="cat-count">(26)</div>
                     </div></a></div>
