updates: 1.scrollable mobile menu, 2.red bold error msg(.err-msg), 3.invitation form under login page

--- a/100_SVG.html
+++ b/100_SVG.html
@@ -64,6 +64,42 @@
               <div class="cat-count">(26)  </div>
             </div>
           </div>
+          <div class="cat-wrapper"><img src="svg/icon-cat-retail-light.svg" class="icon-cat-mobile">
+            <div class="cat-text-field inline">
+              <div class="cat-name">Retail</div>
+              <div class="cat-count">(26)</div>
+            </div>
+          </div>
+          <div class="cat-wrapper"><img src="svg/icon-cat-fitness-light.svg" class="icon-cat-mobile">
+            <div class="cat-text-field inline">
+              <div class="cat-name">Fitness</div>
+              <div class="cat-count">(26)</div>
+            </div>
+          </div>
+          <div class="cat-wrapper"><img src="svg/icon-cat-er-light.svg" class="icon-cat-mobile">
+            <div class="cat-text-field inline">
+              <div class="cat-name">Emergency Service</div>
+              <div class="cat-count">(26)</div>
+            </div>
+          </div>
+          <div class="cat-wrapper"><img src="svg/icon-cat-entertainment-light.svg" class="icon-cat-mobile">
+            <div class="cat-text-field inline">
+              <div class="cat-name">Entertainment</div>
+              <div class="cat-count">(26)</div>
+            </div>
+          </div>
+          <div class="cat-wrapper"><img src="svg/icon-cat-homeimprovement-light.svg" class="icon-cat-mobile">
+            <div class="cat-text-field inline">
+              <div class="cat-name">Home Improvement</div>
+              <div class="cat-count">(26)</div>
+            </div>
+          </div>
+          <div class="cat-wrapper"><img src="svg/icon-cat-nhoguide-light.svg" class="icon-cat-mobile">
+            <div class="cat-text-field inline">
+              <div class="cat-name">NHO Guide</div>
+              <div class="cat-count">(26)  </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
