--- a/03_detail.html
+++ b/03_detail.html
@@ -140,9 +140,7 @@
           </div>
         </div>
         <div class="row top-buffer-xs">
-          <div class="col">
-            <button class="btn-anchorOffer"> <a href="#">back to Offers</a></button>
-          </div>
+          <div class="col"><a href="#" class="offer-anchor">back to Offers</a></div>
         </div>
       </div>
     </section>
