print layout fixes

--- a/03_detail.html
+++ b/03_detail.html
@@ -100,7 +100,7 @@
           <div class="col-12 col-sm-12 col-md-12 col-lg-8">
             <div class="detail-image">
               <div class="row">
-                <div class="col"><img src="image/offer-image-nobu2.png"></div>
+                <div class="col"><img src="image/offer-image-nobu.png"></div>
               </div>
             </div>
             <div class="top-buffer-xs">
@@ -139,8 +139,8 @@
             </div>
           </div>
         </div>
-        <div class="row top-buffer-xs">
-          <div class="col"><a href="#" class="offer-anchor">back to Offers</a></div>
+        <div class="offer-anchor row top-buffer-xs">
+          <div class="col"><a href="#" class="offer-anchor__link">back to Offers</a></div>
         </div>
       </div>
     </section>
