remove presence of print button in mobile

--- a/03_detail.html
+++ b/03_detail.html
@@ -113,9 +113,10 @@
                   <div class="offer-desc"></div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 btn-action-container">
+                  
                   <button id="btn-sms" class="btn-action btn-1">text offer to mobile</button>
                   <button id="btn-save" class="btn-action btn-2">save to favorite</button>
-                  <button class="btn-action btn-3">print offer</button>
+                  <button class="btn-action btn-3 btn-print">print offer</button>
                   <button class="btn-action btn-1 btn-redeem">redeem offer</button>
                 </div>
               </div>
