featured offer detail page 'sign in' and 'enter invitation' buttons update

--- a/03_detail.html
+++ b/03_detail.html
@@ -113,18 +113,13 @@
                   <div class="offer-desc"></div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 btn-action-container">
+                  <div class="get-offer">
+                    <div>To get this offers: </div>
+                    <button class="btn-action btn-2 btn--larger-text">Sign In</button>
+                    <button class="btn-action btn-2 btn--larger-text">Enter Invitation Code</button>
+                  </div>
                   
-                  <button id="btn-sms" class="btn-action btn-1">text offer to mobile</button>
-                  <button id="btn-save" class="btn-action btn-2">save to favorite</button>
-                  <button class="btn-action btn-3 btn-print">print offer</button>
-                  <button class="btn-action btn-1 btn-redeem">redeem offer</button>
                 </div>
-              </div>
-              <div class="detail-restric top-buffer-xs">
-                <div class="restric-title">Deal Restrictions</div>
-                <p>Must be used during displayed time frame. Deals cannot be combined with other deals or subsutituted</p>
-                <p class="expire top-buffer-xs">Expiration Date:<span> 01/16/2017</span></p>
-                <div class="redeem-code"> <span class="code-title">NHO Codes:</span><span class="code-digit">LXKC213</span></div>
               </div>
             </div>
           </div>
@@ -139,9 +134,7 @@
             </div>
           </div>
         </div>
-        <div class="offer-anchor row top-buffer-xs">
-          <div class="col"><a href="#" class="offer-anchor__link">back to Offers</a></div>
-        </div>
+        
       </div>
     </section>
     <footer class="top-buffer">
