additiona favorite offer link on browsing page

--- a/02_browse.html
+++ b/02_browse.html
@@ -132,6 +132,11 @@
                       <div class="cat-name">NHO Guide</div>
                       <div class="cat-count">(26)</div>
                     </div></a></div>
+                <div class="cat-wrapper cat-wrapper__favorite"><a href="link_to_favorite_page"><img src="svg/icon-favorite.svg" class="icon-cat">
+                    <div class="cat-text-field">
+                      <div class="cat-name cat-name__teal-bold">My Favorite Offers</div>
+                      <div class="cat-count cat-count__teal-bold">(2)</div>
+                    </div></a></div>
               </div>
             </div>
           </div>
