open sans 20px teal

--- a/05_register.html
+++ b/05_register.html
@@ -77,7 +77,70 @@
           </div>
         </div>
       </div>
+      <div class="teal__large-opensans">Welcome! Start saving and enjoy your favorite offers.</div>
       <!--either turn this off (I HAVE AN ACCOUNT)-->
+      <div class="box-register top-buffer-sm">
+        <div class="row">
+          <div class="col">
+            <form class="form-animated">
+              <legend class="top-buffer-sm">
+                <div class="form-input">
+                  <input type="email" id="email" required>
+                  <label for="email">Email</label>
+                  <div class="valid"> 
+                    <div class="checkmark"></div>
+                  </div>
+                  <div class="form-msg">Please enter a valid email address</div>
+                </div>
+                <div class="form-input">
+                  <input type="password" id="pw" required placeholder=" " pattern="(?=.*d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
+                  <label for="pw">Password</label>
+                  <div class="valid"> 
+                    <div class="checkmark"></div>
+                  </div>
+                  <div class="form-msg">Your password must be at least 6 characters as well as contain at least one uppercase, one lowercase, and one number.</div>
+                </div>
+                
+                <div class="form-input">
+                  <input type="text" id="firstname" required>
+                  <label for="firstname">First Name</label>
+                  <div class="valid">
+                    <div class="checkmark"></div>
+                  </div>
+                  <div class="form-msg">Hello! whoever that is :)</div>
+                </div>
+                <div class="form-input">
+                  <input type="text" id="lastname" required>
+                  <label for="lastname">Last Name</label>
+                  <div class="valid"> 
+                    <div class="checkmark"></div>
+                  </div>
+                  <div class="form-msg">Can I just call you darling</div>
+                </div>
+                <div class="form-input">
+                  <input type="text" id="street" required>
+                  <label for="street">Street</label>
+                </div>
+                
+                <div class="form-input">
+                  <input type="text" id="zipcode" required>
+                  <label for="zipcode">Zipcode</label>
+                </div>
+                <div class="form-input">
+                  <input type="text" id="cell" required>
+                  <label for="cell">Cellphone Number                </label><span class="teal-1">* The best way to always have your offers with you</span>
+                </div>
+              </legend>
+              <legend class="top-buffer-sm">
+                <input type="checkbox" checked>Yes, I want to recieve my offers via text<br>
+                <input type="checkbox" checked>Keep me Informed about the deals
+                <button class="btn-action btn-2">create account</button>
+                <p class="account-reminder top-buffer-sm">By creating an account, you agree to NHO’s <a href="" class="teal-1">Terms of Use </a>and <a href="" class="teal-1">Privacy Notice</a></p>
+              </legend>
+            </form>
+          </div>
+        </div>
+      </div>
       <!--or turn this off (I AM A NEW USER - CREATE AACOUNT)          -->
       <!--or turn this off (I AM A NEW USER - CREATE AACOUNT)  -->
       <div class="box-enterCode top-buffer-sm">
