Google Social Button

--- a/05_register.html
+++ b/05_register.html
@@ -153,6 +153,9 @@
           </div>
         </div>
       </div>
+      <div class="row-socialLogin row top-buffer-sm">             
+        <button class="btn-action btn-blue btn-google googleBtn"> <i class="btn-google__icon"><img src="svg/app-google.svg"></i><span class="btn-google__title">Sign up with Google</span></button>
+      </div>
     </section>
     <footer class="top-buffer">
       <div class="container">
