beacon-text overlapping fix

--- a/04_favorite.html
+++ b/04_favorite.html
@@ -78,16 +78,20 @@
           <div class="favorite-box"><a><img src="image/retailLogo-nobu-2.png" class="favorite-logo top-buffer-sm"><img src="image/offer-image-nobu2.png" class="favorite image top-buffer-sm">
               <h5>$25 off </h5>
               <h6>your total bill, lets see it when this get extended to two lines </h6>
-              <div class="favorite-geo top-buffer-sm">
-                <div class="geo-city">Costa Mesa,<span class="geo-state"> CA</span></div>
-                <div class="geo-mile">1.1 miles</div>
+              <div class="geo-location top-buffer-sm">
+                <div class="geo-location__icon">
+                  <div class="padding-left--small"><span class="geo-location__city">Costa Mesa,</span><span class="geo-location__state">CA</span></div>
+                </div>
+                <div class="geo-location__mile">1.1 miles</div>
               </div></a></div>
           <div class="favorite-box"><a><img src="image/retailLogo-nobu-2.png" class="favorite-logo top-buffer-sm"><img src="image/offer-image-nobu2.png" class="favorite image top-buffer-sm">
               <h5>$25 off bla bla bla</h5>
               <h6>your total bill</h6>
-              <div class="favorite-geo top-buffer-sm">
-                <div class="geo-city">Costa Mesa,<span class="geo-state"> CA</span></div>
-                <div class="geo-mile">1.1 miles</div>
+              <div class="geo-location top-buffer-sm">
+                <div class="geo-location__icon">
+                  <div class="padding-left--small"><span class="geo-location__city">Costa Mesa,</span><span class="geo-location__state">CA</span></div>
+                </div>
+                <div class="geo-location__mile">1.1 miles</div>
               </div></a></div>
           
           
