--- a/08_redeemMobile.html
+++ b/08_redeemMobile.html
@@ -88,9 +88,11 @@
             <div class="redeem-box"><img src="image/retailLogo-nobu.png" class="redeem-logo top-buffer-xs"><img src="image/offer-image-nobu2.png" class="redeem-image top-buffer-xs">
               <h5>$25 off </h5>
               <h6>your total bill, lets see it when this get extended to two lines </h6>
-              <div class="redeem-geo top-buffer-xs">
-                <div class="geo-city">Costa Mesa,<span class="geo-state"> CA</span></div>
-                <div class="geo-mile">1.1 miles</div>
+              <div class="geo-location top-buffer-xs">
+                <div class="geo-location__icon">
+                  <div class="padding-left--small"><span class="geo-location__city">Costa Mesa,</span><span class="geo-location__state">CA</span></div>
+                </div>
+                <div class="geo-location__mile">1.1 miles</div>
               </div>
               <button class="btn-action btn-3">direction</button>
               <button class="btn-action btn-1">ready to redeem</button>
