invitation form  tuck in, initial screen in iphone6/7 375*667

--- a/01_index.html
+++ b/01_index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
     <title>Home page</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="slick/slick.css">
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
@@ -71,10 +70,10 @@
     <section class="header-shift"></section>
     <section class="headline top-buffer">
       <div class="row justify-content-center">
-        <h1>special Offer for new homeowners only</h1>
+        <h1 class="headline__main-title">special Offer for new homeowners only</h1>
       </div>
       <div class="row justify-content-center">
-        <p>These local offers are exclusively for new owners and cannot be found anywhere else. Access to the very best offers for the first 90 days in your new home.</p>
+        <p class="headline__sub-title">These local offers are exclusively for new owners and cannot be found anywhere else. Access to the very best offers for the first 90 days in your new home.</p>
       </div>
     </section>
     <section class="family top-buffer"><img src="image/family.png" class="image-desktop"><img src="image/family-m.png" class="image-mobile">
